--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   "homepage": "https://github.com/matta-ale/tureferente-server#readme",
   "dependencies": {
     "@types/cheerio": "^0.22.33",
+    "babel-runtime": "^6.26.0",
     "crawlee": "^3.5.8",
+    "dataframe-js": "^1.4.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
+    "pandas-js": "^0.2.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/dataframe-js": "^1.4.2",
     "@types/express": "^4.17.20",
     "@types/node": "^16.18.59",
     "tslint": "^6.1.3",
