--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/cheerio": "^0.22.33",
     "babel-runtime": "^6.26.0",
+    "cors": "^2.8.5",
     "crawlee": "^3.5.8",
     "dataframe-js": "^1.4.4",
     "dotenv": "^16.3.1",
@@ -29,6 +30,7 @@
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/dataframe-js": "^1.4.2",
     "@types/express": "^4.17.20",
     "@types/node": "^16.18.59",
